Fix failing tests and update swagger
